2008-04-12  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-init-buffer): New function.
	(gdb-set-gud-minor-mode-existing-buffers)
	(gdb-info-breakpoints-custom, gdb-get-location)
	(gdb-set-gud-minor-mode-existing-buffers-1): Use it.
	Previously gdb-create-define-alist wasn't always run and added to
	after-save-hook.

	* progmodes/gud.el (gud-tooltip-tips): Use tooltip-event-buffer

2008-04-12  Kevin Ryde  <user42@zip.com.au>

	* progmodes/make-mode.el (makefile-fill-paragraph): Treat indented
	comments like unindented ones.

2008-04-12  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ae-open-documents): Adjust selection range
	parameter origins.

2008-04-11  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	Bind print-level to ensure output forms aren't truncated if
	print-level is set to eval-expression-print-level when going via
	eval-defun and friends, or has been otherwise fiddled with.

2008-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-mode.el (c-basic-common-init): Don't set
	font-lock-extend-after-change-region-function globally.

2008-04-23  Juanma Barranquero  <lekktu@gmail.com>

	* speedbar.el (speedbar-use-tool-tips-flag)
	(speedbar-ignored-directory-regexp, speedbar-file-unshown-regexp)
	(speedbar-file-regexp, speedbar-message, speedbar-item-info)
	(speedbar-files-item-info, speedbar-maybe-add-localized-support)
	(speedbar-insert-files-at-point, speedbar-dynamic-tags-function-list)
	(speedbar-generic-list-positioned-group-p, speedbar-insert-generic-list)
	(speedbar-fetch-replacement-function, speedbar-extract-one-symbol)
	(speedbar-separator-face): Fix typos in docstrings.
	(speedbar-stealthy-function-list, speedbar-verbosity-level)
	(speedbar-supported-extension-expressions, speedbar-update-current-file)
	(speedbar-add-indicator, speedbar-tag-expand): Reflow docstring.
	(speedbar-use-imenu-flag, speedbar-ignored-directory-expressions)